--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bytemuck = {version = "1.13.1", features = ["derive"]}
 env_logger = "0.10.0"
+legion = "0.4.0"
 pollster = "0.3.0"
 wgpu = "0.15.1"
 winit = "0.28.2"
