--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 bytemuck = {version = "1.13.1", features = ["derive"]}
 env_logger = "0.10.0"
+image = "0.24.5"
 legion = "0.4.0"
+naga = {version = "0.11.0" }
 pollster = "0.3.0"
+simple-error = "0.3.0"
 wgpu = "0.15.1"
 winit = "0.28.2"
