--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ legion = "0.4.0"
 naga = {version = "0.11.0" }
 pollster = "0.3.0"
 simple-error = "0.3.0"
+uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
 wgpu = "0.15.1"
 winit = "0.28.2"
