--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 bytemuck = {version = "1.13.1", features = ["derive"]}
 env_logger = "0.10.0"
+font-loader = "0.11.0"
+fontdue = "0.7.2"
 image = "0.24.5"
 legion = "0.4.0"
 naga = {version = "0.11.0" }
