--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ image = "0.24.5"
 legion = "0.4.0"
 naga = {version = "0.11.0" }
 pollster = "0.3.0"
+regex = "1.8.1"
 simple-error = "0.3.0"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
 wgpu = "0.15.1"
