--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bytemuck = {version = "1.13.1", features = ["derive"]}
+cgmath = "0.18.0"
 env_logger = "0.10.0"
 font-loader = "0.11.0"
 fontdue = "0.7.2"
@@ -14,7 +15,7 @@ image = "0.24.5"
 legion = "0.4.0"
 naga = {version = "0.11.0" }
 pollster = "0.3.0"
-regex = "1.8.1"
+regex = "1.7.1"
 simple-error = "0.3.0"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
 wgpu = "0.15.1"
