--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,14 @@ env_logger = "0.10.0"
 font-loader = "0.11.0"
 fontdue = "0.7.2"
 image = "0.24.5"
+itertools = "0.10.5"
 legion = "0.4.0"
 naga = {version = "0.11.0" }
 pollster = "0.3.0"
 regex = "1.7.1"
 simple-error = "0.3.0"
+tree-sitter = "0.20.10"
+tree-sitter-rust = "0.20.3"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
 wgpu = "0.15.1"
 winit = "0.28.2"
