--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ pollster = "0.3.0"
 regex = "1.7.1"
 simple-error = "0.3.0"
 tree-sitter = "0.20.10"
+tree-sitter-highlight = "0.20.1"
 tree-sitter-rust = "0.20.3"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
 wgpu = "0.15.1"
