switched to row/col buffer format

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,7 +39,7 @@
                 }
             },
             "args": [
-                "src/renderer.rs"
+                "src/app.rs"
             ],
             "cwd": "${workspaceFolder}"
         },
