--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,14 @@ edition = "2021"
 bitflags = "2.2.1"
 bytemuck = {version = "1.13.1", features = ["derive"]}
 cgmath = "0.18.0"
+colors-transform = "0.2.11"
 env_logger = "0.10.0"
 font-loader = "0.11.0"
 fontdue = "0.7.2"
 image = "0.24.5"
 itertools = "0.10.5"
 legion = "0.4.0"
-naga = {version = "0.11.0" }
+naga = {version = "0.12.1" }
 pollster = "0.3.0"
 regex = "1.7.1"
 simple-error = "0.3.0"
@@ -24,5 +25,5 @@ tree-sitter-highlight = "0.20.1"
 tree-sitter-python = "0.20.2"
 tree-sitter-rust = "0.20.3"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
-wgpu = "0.15.1"
+wgpu = "0.16.1"
 winit = "0.28.2"
